Add intro paragrpah

--- a/hello-world.html
+++ b/hello-world.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Hello World!</title>
+</head>
+<body>
+
 <h1>Hello, World!</h1>
+<p>Welcome to my first website yo! I am about to embark on the exciting journey of learning how to code. Won´t you join me?</p>
+</body>
+</html>
